--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -10,6 +10,12 @@ RUN apt-get -y --no-install-recommends install php7.4-memcached php7.4-mysql php
 
 # Enable remote xdebug
 RUN echo "xdebug.remote_enable=on" >> /etc/php/7.4/mods-available/xdebug.ini
+RUN echo "xdebug.mode=debug" >> /etc/php/7.4/mods-available/xdebug.ini
+RUN echo "xdebug.idekey=VSCODE" >> /etc/php/7.4/mods-available/xdebug.ini
+RUN echo "xdebug.client_host=host.docker.internal" >> /etc/php/7.4/mods-available/xdebug.ini
+RUN echo "xdebug.log=/application/xdebug.logs" >> /etc/php/7.4/mods-available/xdebug.ini
+RUN echo "xdebug.discover_client_host=1" >> /etc/php/7.4/mods-available/xdebug.ini
+RUN echo "xdebug.remote_connect_back=0" >> /etc/php/7.4/mods-available/xdebug.ini
 
 # Install git
 RUN apt-get -y install git 
@@ -18,5 +24,5 @@ RUN apt-get -y install git
 RUN apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Update the PHP.ini file, enable <? ?> tags
-RUN sed -i "s/short_open_tag = Off/short_open_tag = On/" /etc/php/7.4/fpm/php.ini    
-RUN sed -i "s/asp_tags = Off/asp_tags = On/" /etc/php/7.4/fpm/php.ini
+# RUN sed -i "s/short_open_tag = Off/short_open_tag = On/" /etc/php/7.4/fpm/php.ini    
+# RUN sed -i "s/asp_tags = Off/asp_tags = On/" /etc/php/7.4/fpm/php.ini
