--- a/phpdocker/php-fpm/php-ini-overrides.ini
+++ b/phpdocker/php-fpm/php-ini-overrides.ini
@@ -2,8 +2,8 @@ upload_max_filesize = 2048M
 post_max_size = 2056M
 
 mysql.default_socket = /tmp/mysql.sock
-short_open_tag = On
-asp_tags = On
+short_open_tag = Off
+asp_tags = Off
 
 ; error_reporting = E_ALL | E_STRICT
 ; display_errors = On
