--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -1,8 +1,16 @@
 server {
     listen 80 default;
+
     access_log /var/log/nginx/application.access.log;
+
     root /application/public;
+
     index index.php;
+
+    # try to serve file directly, fallback to index.php
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
 
     if (!-e $request_filename) {
         rewrite ^.*$ /index.php last;
